deploy/kubernetes/sidecar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: media
spec:
  selector:
    app: torrent
  ports:
    - name: http
      port: 80
      targetPort: webui
      protocol: TCP
